# aws

./: README.md  pyproject.toml
scripts/: set_assume_role.sh
services/ec2/sg/: cli.md  script.py
tests/: conftest.py
tests/ec2/: test_ec2.py
