[tool.poetry]
name = "aws-study"
version = "0.1.0"
description = ""
authors = ["tiaz0128 <tiaz0128@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.88"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
    "tests",
]
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.log"
log_file_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "DEBUG"

